frontend/src/pages/messages/Messages.scss
@import "../../styles/breakpoints";
@import "../../styles/colors";
#chat-display-container {
    display: none; /* mobile first! */
    border-right: 1px solid #888;
}

#chat-display_messages {
    height: calc(100vh - 66px - 66px) !important;
    width: 100%;
    overflow-y: scroll;
}

#chat-display_outer-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.chat-display_grey-outline {
    border: 1px solid #888;
}

#cd_msg-input-container {
    height: 66px;
}

.chat-display_top-bottom-height {
    height: 56px;
}

.chat-display_inbox-adjust {
    // margin: 10px 10px;
    padding-left: 10px;
    width: 90% !important;
}

#cd-username-container {
    height: 66px;
    background-color: lighten($color: $dark-blue, $amount: 0.2);
}

#cd-username-color {
    color: $light-grey;
}

.generic-chat-bub {
    height: auto;
    margin: 6px 7px;
    padding: 2px 10px;
    // border: 3px solid coral !important;

    width: 75%;
    color: white;
    display: flex;
    flex-direction: row !important;
}

.generic-chat-bub p {
    margin: 0 8px !important;
    padding: 3px 7px;
    background-color: $light-grey;
    border-radius: 5px;
    height: auto;
    text-overflow: wrap;
}

.generic-chat-bub-container {
    // border: 2px solid springgreen !important;
    width: auto;
    height: auto;
    // border: 2px solid red;
}

.generic-chat-bub-pfp {
    margin-top: 0;
    height: 34px;
    width: 34px;
}

#inbox {
    width: 100%;
    height: 100vh;
    border-right: 1px solid #888;
    display: flex;
    flex-direction: column;
}

#inbox-items {
    // flex: 1 1 auto;
    flex-grow: 1;
    overflow-y: scroll;
    height: 300px;
}

.inbox-header {
    flex: 0 1 70px;
    border-bottom: 1px solid #888;
}

.inbox-search {
    width: 100%;
    height: 40px;
    border-radius: 15px;
}

#messages_page {
    width: auto; /* mobile first! */
}

#messages_aside {
    display: none; /* mobile first! */
}

.right-side-chat {
    // border: 3px solid springgreen;
}

.right-side-chat-inner {
    // border: 2px solid blueviolet;
}

@media (min-width: $full-sidebar) {
    #messages_page {
        width: 990px;
    }

    #inbox {
        width: 390px;
    }

    #messages_aside {
        flex-basis: auto;
        width: auto;
    }
}

@media (min-width: $thin-rightbar) and (max-width: $full-sidebar - 1) {
    #messages_page {
        width: 990px;
    }

    #inbox {
        width: 390px;
    }

    #messages_aside {
        flex-basis: calc(10px + 100 * (100% - 1100px) / 180);
        width: calc(10px + 100 * (100% - 1100px) / 180);
    }
}

@media (min-width: $rightbar-shows) and (max-width: $thin-rightbar - 1) {
    #main {
        // there is some bogus bug with calc() going on.
        // I swear the calc() for #sidebar and #messages_aside is perfect.
    }

    #messages_page {
        width: 920px;
    }

    #inbox {
        width: 320px;
    }

    #messages_aside {
        flex-basis: calc(55 * (100% - 1000px) / 100);
        width: calc(55 * (100% - 1000px) / 100);
    }
}

@media (min-width: $rightbar-shows) {
    #chat-display-container {
        width: 600px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
}

@media (min-width: $shrink-feed) and (max-width: $rightbar-shows - 1) {
    #messages_page {
        width: 600px;
    }

    #messages_aside {
        flex-basis: calc(200 * ((100% - 700px) / 300));
        width: calc(200 * ((100% - 700px) / 300));
    }
}

@media (min-width: $shrink-feed) {
    #messages_aside {
        display: block;
        flex-basis: auto;
    }
}

@media (min-width: $mobile-sized) and (max-width: $shrink-feed - 1) {
    #messages_page {
        width: calc(100% - 100px);
        // border: 2px solid yellow;
    }
}

